apac-south/k8s/sm/97-quotes.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "quotes"
spec:
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/excludeOutboundIPRanges: 10.195.9.82/32
